--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;1,100;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="{{ url_for('static', filename='icons/' + 'favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -183,8 +182,8 @@
 
     <div class="sidenav" id="mySidenav">
         <div class="menu-icon" onclick="toggleNav()">&#9776;</div>
-        <a href="{{ url_for('about_page') }}" aria-label="About"><i class="fas fa-info-circle"></i><b>About</b></a>
-        <a href="{{ url_for('contact_page') }}" aria-label="Contact"><i class="fas fa-envelope"></i><b>Contact</b></a>
+        <a href="src/about.html" aria-label="About"><i class="fas fa-info-circle"></i><b>About</b></a>
+        <a href="src/contact.html" aria-label="Contact"><i class="fas fa-envelope"></i><b>Contact</b></a>
         
     </div>
 
