Added topics page.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     <section class="hero">
         <div class="hero-content">
-        <a href="{{ url_for('genres_page') }}" class="hero-btn"><b>Start your journey</b></a>
+        <a href="src/topics.html" class="hero-btn"><b>Start your journey</b></a>
         </div>
     </section>
 
