Update topics.html with plausible analytics tool

--- a/src/topics.html
+++ b/src/topics.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Added plausible analytics to observe topics page. -->
+    <script defer data-domain="code-crusaders-dsu.github.io/mvp-math/src/topics.html" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool topics</title>
