Update index.html with plausible

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         person_profiles: 'identified_only' // or 'always' to create profiles for anonymous users as well
     })
     </script>
+    <!-- Plausible analytics tool integration -->
+    <script defer data-domain="code-crusaders-dsu.github.io/mvp-math" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashLearn Homepage</title>
