Update index.html with proper domain name in plausible

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     })
     </script>
     <!-- Plausible analytics tool integration -->
-    <script defer data-domain="code-crusaders-dsu.github.io/mvp-math" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+    <script defer data-domain="code-crusaders-dsu.github.io/mvp-math/" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
     <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
     <meta charset="UTF-8">
